--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,14 +5,17 @@
 <head th:replace="fragments.html::head"></head>
 <body class="bg-light">
 <nav th:replace="fragments.html::main-nav"></nav>
+<div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
+    스터디 가입을 완료하려면
+    <a href="#" th:href="@{/check-email}" class="alert-link">
+        계정 인증 이메일을 확인</a> 하세요.
+</div>
 <div class="container">
     <div class="py-5 text-center">
         <h2>스터디올래</h2>
     </div>
     <footer th:replace="fragments.html::footer"></footer>
 </div>
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script type="application/javascript">
     (function () {
 
