--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -12,6 +12,13 @@
             <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
         </div>
         <div class="col-8">
+            <!--postmapping("/settings/profile") 시에 RedirectAttribute 에 message 가 있다면-->
+            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+                <span th:text="${message}">메세지</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+            </div>
             <!--fragment elements -->
             <div class="row">
                 <h2 class="col-sm-12" th:text="${account.nickname}">herohe</h2>
