--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -9,7 +9,7 @@
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
             <!--Menu fragments-->
-            <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
+            <div th:replace="fragments.html :: settings-menu(currentMenu='password')"></div>
         </div>
         <div class="col-8">
             <!--postmapping("/settings/profile") 시에 RedirectAttribute 에 message 가 있다면-->
