--- a/src/main/resources/templates/study/members.html
+++ b/src/main/resources/templates/study/members.html
@@ -10,7 +10,10 @@
 
 <div class="container">
     <div th:replace="fragments.html::study-info"></div>
-    <div th:replace="fragments.html::study-menu(studyMenu='info')"></div>
+    <div th:replace="fragments.html::study-menu(studyMenu='members')"></div>
+
+    <div th:replace="fragments.html::member-list(members=${study.managers}, isManager=${true})"></div>
+    <div th:replace="fragments.html::member-list(members=${study.members}, isManager=${false})"></div>
 
     <div class="row px-3 justify-content-center">
         <div class="col-10 pt-3" th:utext="${study.fullDescription}"></div>
@@ -18,9 +21,8 @@
 
     <footer th:replace="fragments.html::footer"></footer>
 </div>
-
 <script type="application/javascript">
-    $(function() {
+    $(function () {
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
