--- a/src/main/resources/templates/study/settings/description.html
+++ b/src/main/resources/templates/study/settings/description.html
@@ -51,6 +51,7 @@
 
     <footer th:replace="fragments.html::footer"></footer>
 </div>
+<script th:replace="fragments.html :: tooltip"></script>
 <script th:replace="fragments.html :: form-validation"></script>
 <script th:replace="fragments.html :: editor-script"></script>
 </body>
