--- a/src/main/resources/templates/study/form.html
+++ b/src/main/resources/templates/study/form.html
@@ -61,6 +61,7 @@
     </div>
     <footer th:replace="fragments.html::footer"></footer>
 </div>
+<script th:replace="fragments.html :: tooltip"></script>
 <script th:replace="fragments.html::form-validation"></script>
 <script th:replace="fragments.html :: editor-script"></script>
 </body>
