--- a/src/main/resources/templates/study/view.html
+++ b/src/main/resources/templates/study/view.html
@@ -19,10 +19,6 @@
     <footer th:replace="fragments.html::footer"></footer>
 </div>
 
-<script type="application/javascript">
-    $(function() {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+<script th:replace="fragments.html :: tooltip"></script>
 </body>
 </html>
