--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,6 +31,7 @@
             padding: 0;
             margin: 0;
         }
+
         #study-logo img {
             height: auto;
             width: 100%;
@@ -274,10 +275,14 @@
 <div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
     <ul class="list-unstyled col-10">
         <li class="media mt-3" th:each="member: ${members}">
-            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
-            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border bg-light mr-3"/>
+            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}"
+                 width="64" height="64" class="rounded border bg-light mr-3"></svg>
+            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64"
+                 height="64" class="rounded border bg-light mr-3"/>
             <div class="media-body">
-                <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span><span th:if="${isManager}" class="badge badge-primary">관리자</span></h5>
+                <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span><span th:if="${isManager}"
+                                                                                      class="badge badge-primary">관리자</span>
+                </h5>
                 <span th:text="${member.bio}"></span>
             </div>
         </li>
@@ -293,7 +298,8 @@
        href="#" th:href="@{'/study/' + ${study.path} + '/settings/tags'}">스터디 주제</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
        htef="#" th:href="@{'/study/' + ${study.path} + '/settings/zones'}">활동 지역</a>
-    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'study'}? active"
+    <a class="list-group-item list-group-item-action list-group-item-danger"
+       th:classappend="${currentMenu == 'study'}? active"
        href="#" th:href="@{'/study/' + ${study.path} + '/settings/study'}">스터디</a>
 </div>
 
@@ -318,11 +324,109 @@
     </button>
 </div>
 
-<script type="application/javascript" th:fragment="tooltip">
+<script th:fragment="tooltip" type="application/javascript">
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
 
+<div th:fragment="update-tags (baseUrl)">
+    <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
+    <script type="application/javascript">
+        $(function () {
+            function tagRequest(url, tagTitle) {
+                $.ajax({
+                    dataType: "json",
+                    autocomplete: {
+                        enabled: true,
+                        rightKey: true,
+                    },
+                    contentType: "application/json; charset=utf-8",
+                    method: "POST",
+                    url: "[(${baseUrl})]" + url,
+                    data: JSON.stringify({'tagTitle': tagTitle})
+                }).done(function (data, status) {
+                    console.log("${data} and status is ${status}");
+                });
+            }
 
+            function onAdd(e) {
+                tagRequest("/add", e.detail.data.value);
+            }
+
+            function onRemove(e) {
+                tagRequest("/remove", e.detail.data.value);
+            }
+
+            var tagInput = document.querySelector("#tags");
+
+            // tagify 적용
+            var tagify = new Tagify(tagInput, {
+                pattern: /^.{0,20}$/,
+                whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
+                dropdown: {
+                    enabled: 1, // suggest tags after a single character input
+                } // map tags
+            });
+            // "add" 라는 이벤트가 발생하면 onAdd
+            tagify.on("add", onAdd);
+            tagify.on("remove", onRemove);
+
+            //add a class To Tagify's input element
+            tagify.DOM.input.classList.add('form-control');
+            //re-place Tagify's input element outside of the element (tagify.DOM.scope), just before it
+            tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
+        });
+    </script>
+</div>
+
+<div th:fragment="update-zones (baseUrl)">
+    <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
+    <script type="application/javascript">
+        $(function () {
+            function tagRequest(url, zoneName) {
+                $.ajax({
+                    dataType: "json",
+                    autocomplete: {
+                        enabled: true,
+                        rightKey: true,
+                    },
+                    contentType: "application/json; charset=utf-8",
+                    method: "POST",
+                    url: "[(${baseUrl})]" + url,
+                    data: JSON.stringify({'zoneName': zoneName})
+                }).done(function (data, status) {
+                    console.log("${data} and status is ${status}");
+                });
+            }
+
+            function onAdd(e) {
+                tagRequest("/add", e.detail.data.value);
+            }
+
+            function onRemove(e) {
+                tagRequest("/remove", e.detail.data.value);
+            }
+
+            var zoneInput = document.querySelector("#zones");
+
+            // tagify 적용
+            var tagify = new Tagify(zoneInput, {
+                enforceWhitelist: true,
+                whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
+                dropdown: {
+                    enabled: 1, // suggest tags after a single character input
+                } // map tags
+            });
+            // "add" 라는 이벤트가 발생하면 onAdd
+            tagify.on("add", onAdd);
+            tagify.on("remove", onRemove);
+
+            //add a class To Tagify's input element
+            tagify.DOM.input.classList.add('form-control');
+            //re-place Tagify's input element outside of the element (tagify.DOM.scope), just before it
+            tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
+        });
+    </script>
+</div>
 </html>
