--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -198,7 +198,7 @@
                         disabled>CLOSED</button>
             </span>
             <span th:if="${!study.recruiting}"
-                  class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom"
+                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom"
                   title="팀원 모집중 아님">
                 <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
             </span>
@@ -212,10 +212,10 @@
             </span>
             <span sec:authorize="isAuthenticated()"
                   th:if="${!study.closed && study.isMember(#authentication.principal)}" class="btn-group" role="group">
-                <a class="btn btn-outline-warning" th:href="@{'/study' + ${study.path} + '/leave'}">
+                <a class="btn btn-outline-warning" th:href="@{'/study/' + ${study.path} + '/leave'}">
                     스터디 탈퇴
                 </a>
-                <a class="btn btn-outline-primary" th:href="@{'/study' + ${study.path} + '/members'}"
+                <a class="btn btn-outline-primary" th:href="@{'/study/' + ${study.path} + '/members'}"
                    th:text="${study.members.size()}">1</a>
             </span>
             <span sec:authorize="isAuthenticated()"
@@ -252,7 +252,7 @@
 
 <div th:fragment="study-menu (studyMenu)" class="row px-3 justify-content-center bg-light">
     <nav class="col-10 nav nav-tabs">
-        <a class="nav-item nav-link active" href="#" th:classappend="${studyMenu == 'info'}? active"
+        <a class="nav-item nav-link" href="#" th:classappend="${studyMenu == 'info'}? active"
            th:href="@{'/study/'+ ${study.path}}">
             <i class="fa fa-info-circle"></i> 소개
         </a>
