--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -202,7 +202,8 @@
                   title="팀원 모집중 아님">
                 <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
             </span>
-            <span sec:authorize="isAuthenticated()" th:if="${study.isJoinable(#authentication.principal)}"
+            <span sec:authorize="isAuthenticated()"
+                  th:if="${study.isJoinable(#authentication.principal)}"
                   class="btn-group" role="group" aria-label="Basic example">
                 <a class="btn btn-primary" th:href="@{'/study/' + ${study.path} + '/join'}">
                     스터디 가입
