--- a/src/main/resources/templates/study/settings/study.html
+++ b/src/main/resources/templates/study/settings/study.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments.html :: head"></head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
@@ -93,7 +95,7 @@
                         <input id="path" type="text" name="newPath" th:value="${study.path}" class="form-control"
                                placeholder="예) study-path" aria-describedby="pathHelp" required>
                         <small id="pathHelp" class="form-text text-muted">
-                            공백없이 문자, 숫자, 대시(-)와 언더바(_)만 3자 이상 20자 이내로 입력하세요. 스터디 홈 주소에 사용ㅎ바니다. 예)
+                            공백없이 문자, 숫자, 대시(-)와 언더바(_)만 3자 이상 20자 이내로 입력하세요. 스터디 홈 주소에 사용합니다. 예)
                             /study/<b>study-path</b>
                         </small>
                         <small class="invalid-feedback">스터디 경로를 입력하세요.</small>
