--- a/src/main/resources/templates/event/form.html
+++ b/src/main/resources/templates/event/form.html
@@ -96,7 +96,7 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-primary btn-block" type="submit"
-                        aria-describedby="submitHelp">모임 만들
+                        aria-describedby="submitHelp">모임 만들기
                 </button>
             </div>
         </form>
