66.events view ,query N+1 issue solution

--- a/src/main/resources/templates/event/view.html
+++ b/src/main/resources/templates/event/view.html
@@ -204,25 +204,6 @@
     </div>
     <footer th:replace="fragments.html :: footer"></footer>
 </div>
-<script src="/node_modules/moment/min/moment-with-locales.min.js"></script>
-<script type="application/javascript">
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-
-        moment.locale('ko');
-        $(".date-time").text(function (index, dateTime) {
-            return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLL');
-        });
-        $(".date").text(function (index, dateTime) {
-            return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LL');
-        });
-        $('.weekday').text(function(index, dateTime) {
-            return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('dddd');
-        });
-        $('.time').text(function (index, dateTime) {
-            return moment(dateTime, "YYYY-MM-DD`T`hhLmm").format('LT');
-        });
-    })
-</script>
+<div th:replace="fragments.html :: date-time"></div>
 </body>
 </html>
