70.event accept and checkin, JPA Domain Entity Converter USED in Controller

--- a/src/main/resources/templates/event/view.html
+++ b/src/main/resources/templates/event/view.html
@@ -206,4 +206,11 @@
 </div>
 <div th:replace="fragments.html :: date-time"></div>
 </body>
+
+<script type="application/javascript">
+    $(function () {
+
+    })
+
+</script>
 </html>
