--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <a href="#" th:href="@{/check-email}" class="alert-link">
         계정 인증 이메일을 확인</a> 하세요.
 </div>
-<div class="container">
+<div class="container" th:if="${account == null}">
     <section class="jumbotron text-center">
         <div class="container">
             <h1>스터디올래</h1>
